<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="2"
    android:layout_row="4"
    android:useDefaultMargins="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:max="30"
        android:padding="@dimen/standard_text_padding"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:padding="@dimen/standard_text_padding"
        android:text="@string/tip_percent"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/percentSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tipLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="@dimen/standard_text_padding"
        android:text="@string/tip_label"
        app:layout_constraintEnd_toStartOf="@+id/tipTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiotextview" />

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="@dimen/standard_text_padding"
        android:text="@string/total_label"
        app:layout_constraintEnd_toStartOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabelTextView" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:background="#A8E8BB15"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:background="#A8E8BB15"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />


    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="71dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/editEnterAmount"
        app:layout_constraintStart_toStartOf="@+id/editEnterAmount"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editEnterAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="#6CBEDD"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEnterAmount" />

    <TextView
        android:id="@+id/spinnerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/spinner_txt"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEnterAmount" />

    <TextView
        android:id="@+id/totalPerPersonView"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:background="#A8E8BB15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView" />

    <TextView
        android:id="@+id/PerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="@dimen/standard_text_padding"
        android:text="@string/per_person"
        app:layout_constraintEnd_toStartOf="@+id/totalPerPersonView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabelTextView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentSeekBar" >
    <RadioButton
        android:id="@+id/rNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/radio_no_text"/>
    <RadioButton
        android:id="@+id/rTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/radio_tip_text"/>
    <RadioButton
        android:id="@+id/rTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/radio_total_text"/>
    </RadioGroup>

    <TextView
        android:id="@+id/radiotextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/radio_round"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>